Implement permissionController
