# docs/openapi.yaml
@@ -568,6 +568,33 @@ paths:
                 '500':
                     description: Internal Server Error
 
+    /api/permissions:
+        get:
+            tags:
+                - Permissions
+            description: Get all permissions
+            responses:
+                '200':
+                    description: Ok
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    permissions:
+                                        type: array
+                                        items:
+                                            type: object
+                                            properties:
+                                                id:
+                                                    type: string
+                                                    format: uuid
+                                                name:
+                                                    type: string
+                '400':
+                    description: Bad Request
+                '500':
+                    description: Internal Server Error
     /api/permissions/user/{userId}:
         get:
             tags:
